# MultimodalLearning

./: Makefile  README.md  datapreprocessing.py  model_training.py  mypy.ini  pyproject.toml  requirements.txt  run_preprocessing.py  setup.py  time_training.py  timepreprocessing.py
scripts/: run_preprocessing.py  train.py
src/: __init__.py  loss.py  transforms.py  utils.py
src/models/: dataset.py  multimodal_model.py
src/scripts/: run_preprocessing.py  train.py
